Updated Data Prep File

--- a/happiness_prep.ipynb
+++ b/happiness_prep.ipynb
@@ -570,9 +570,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0      int64\n",
+       "country_id      int64\n",
+       "country        object\n",
+       "code           object\n",
+       "Latitude      float64\n",
+       "Longitude     float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "geo_data.dtypes\n"
    ]
