--- a/happiness_prep.ipynb
+++ b/happiness_prep.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "4           4           5    Argentina   AR -38.416097 -63.616672"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "4    Argentina -38.416097 -63.616672"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "4     0.45811            2.45176  2015       Canada  56.130366 -106.346771  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "4                        NaN                        NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
        "4          NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3150,7 +3150,7 @@
        "[624 rows x 20 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3161,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4313,7 +4313,7 @@
        "[624 rows x 12 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4322,6 +4322,59 @@
     "# Remove columns: country, Region, Standard Error, Lower Confidence Interval, Upper Confidence Interval, Whisker.high, Whisker.low\n",
     "cleaned_merged_complete = merged_complete.drop(columns=['Dystopia Residual','country', 'Region', 'Standard Error', 'Lower Confidence Interval', 'Upper Confidence Interval', 'Whisker.high', 'Whisker.low'])\n",
     "cleaned_merged_complete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Afghanistan', 'Albania', 'Algeria', 'Angola', 'Argentina',\n",
+       "       'Armenia', 'Australia', 'Austria', 'Azerbaijan', 'Bahrain',\n",
+       "       'Bangladesh', 'Belarus', 'Belgium', 'Belize', 'Benin', 'Bhutan',\n",
+       "       'Bolivia', 'Bosnia and Herzegovina', 'Botswana', 'Brazil',\n",
+       "       'Bulgaria', 'Burkina Faso', 'Burundi', 'Cambodia', 'Cameroon',\n",
+       "       'Canada', 'Central African Republic', 'Chad', 'Chile', 'China',\n",
+       "       'Colombia', 'Comoros', 'Congo (Brazzaville)', 'Congo (Kinshasa)',\n",
+       "       'Costa Rica', 'Croatia', 'Cyprus', 'Czech Republic', 'Denmark',\n",
+       "       'Djibouti', 'Dominican Republic', 'Ecuador', 'Egypt',\n",
+       "       'El Salvador', 'Estonia', 'Ethiopia', 'Finland', 'France', 'Gabon',\n",
+       "       'Georgia', 'Germany', 'Ghana', 'Greece', 'Guatemala', 'Guinea',\n",
+       "       'Haiti', 'Honduras', 'Hong Kong', 'Hong Kong S.A.R., China',\n",
+       "       'Hungary', 'Iceland', 'India', 'Indonesia', 'Iran', 'Iraq',\n",
+       "       'Ireland', 'Israel', 'Italy', 'Ivory Coast', 'Jamaica', 'Japan',\n",
+       "       'Jordan', 'Kazakhstan', 'Kenya', 'Kosovo', 'Kuwait', 'Kyrgyzstan',\n",
+       "       'Laos', 'Latvia', 'Lebanon', 'Lesotho', 'Liberia', 'Libya',\n",
+       "       'Lithuania', 'Luxembourg', 'Macedonia', 'Madagascar', 'Malawi',\n",
+       "       'Malaysia', 'Mali', 'Malta', 'Mauritania', 'Mauritius', 'Mexico',\n",
+       "       'Moldova', 'Mongolia', 'Montenegro', 'Morocco', 'Mozambique',\n",
+       "       'Myanmar', 'Namibia', 'Nepal', 'Netherlands', 'New Zealand',\n",
+       "       'Nicaragua', 'Niger', 'Nigeria', 'North Cyprus', 'Norway', 'Oman',\n",
+       "       'Pakistan', 'Palestinian Territories', 'Panama', 'Paraguay',\n",
+       "       'Peru', 'Philippines', 'Poland', 'Portugal', 'Puerto Rico',\n",
+       "       'Qatar', 'Romania', 'Russia', 'Rwanda', 'Saudi Arabia', 'Senegal',\n",
+       "       'Serbia', 'Sierra Leone', 'Singapore', 'Slovakia', 'Slovenia',\n",
+       "       'Somalia', 'Somaliland Region', 'Somaliland region',\n",
+       "       'South Africa', 'South Korea', 'South Sudan', 'Spain', 'Sri Lanka',\n",
+       "       'Sudan', 'Suriname', 'Swaziland', 'Sweden', 'Switzerland', 'Syria',\n",
+       "       'Taiwan', 'Taiwan Province of China', 'Tajikistan', 'Tanzania',\n",
+       "       'Thailand', 'Togo', 'Trinidad and Tobago', 'Tunisia', 'Turkey',\n",
+       "       'Turkmenistan', 'Uganda', 'Ukraine', 'United Arab Emirates',\n",
+       "       'United Kingdom', 'United States', 'Uruguay', 'Uzbekistan',\n",
+       "       'Venezuela', 'Vietnam', 'Yemen', 'Zambia', 'Zimbabwe'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_merged_complete[\"Country\"].unique()"
    ]
   },
   {
